Fixes 141 - Wrap menu labels is a span and give them a class nav-label and hide them when under $desktop size.

--- a/source/css/components/quire-navbar.scss
+++ b/source/css/components/quire-navbar.scss
@@ -157,6 +157,10 @@
       display: block;
     }
 
+    span.nav-label {
+      display: inline-block;
+    }
+
     .menu-button {
       width: 18px;
       display: inline-block;
@@ -186,11 +190,18 @@
       }
     }
 
-    @media screen and (max-width: $tablet) {
+    @media screen and (max-width: $desktop) {
       &.quire-home-page {
         display: block;
         padding-left: 0;
         padding-right: 0;
+      }
+      &.quire-next-page,
+      &.quire-previous-page {
+        display: block;
+      }
+      span.nav-label {
+        display: none;
       }
     }
 
